--- a/api/public/stylesheets/style.css
+++ b/api/public/stylesheets/style.css
@@ -2,3 +2,15 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+.text-gold {
+    color: rgb(226, 185, 0);
+}
+
+.text-silver {
+    color: rgb(165, 165, 165);
+}
+
+.text-bronze {
+    color: brown;
+}
